--- a/idol_details.html
+++ b/idol_details.html
@@ -62,12 +62,30 @@
       
       <input class="open-menu toggle-slide-left" type="image" src="images/blueburger.png" alt="Submit" width="25" style="position:relative;float:left; margin:20px 50px 0 0;">
 
-     <!--  <button class="open-menu toggle-slide-left">
-        <img src="images/blueburger.png" width="25"/>
-      </button> -->
-      <a class="w-nav-brand brand-link" href="index.html" style="margin-top:20px;">
+      <a class="w-nav-brand brand-link" href="index.html">
         <img src="images/helion-logo.png" width="216"/>
       </a>
+
+      <div class="w-nav-button nav-link menu" >
+        <div class="w-icon-nav-menu"></div>
+      </div>
+      <div class="w-dropdown header-dropdown" data-delay="0">
+        <div class="w-dropdown-toggle">
+          <div>SCD East Coast</div>
+          <div class="w-icon-dropdown-toggle"></div>
+        </div>
+        <nav class="w-dropdown-list">
+          <a class="w-dropdown-link" href="#">Sales &amp; Marketing</a>
+          <a class="w-dropdown-link" href="#">Finance &amp; HR</a>
+          <a class="w-dropdown-link" href="#">R&amp;D Programs</a>
+          <a class="w-dropdown-link" href="#">R&amp;D Skunkworks</a>
+          <a class="w-dropdown-link" href="#">East Operations</a>
+        </nav>
+      </div>
+
+
+
+
       <nav class="w-nav-menu nav-menu" role="navigation">
         <a class="w-nav-link nav-link" href="#">
           <img src="images/search.png" width="22"/>
@@ -85,22 +103,9 @@
           <img src="images/avatar.png" width="22"/>
         </a>
       </nav>
-      <div class="w-nav-button nav-link menu" style="float:left;margin-top:10px;">
-        <div class="w-icon-nav-menu"></div>
-      </div>
-      <div class="w-dropdown header-dropdown" data-delay="0">
-        <div class="w-dropdown-toggle">
-          <div>SCD East Coast</div>
-          <div class="w-icon-dropdown-toggle"></div>
-        </div>
-        <nav class="w-dropdown-list">
-          <a class="w-dropdown-link" href="#">Sales &amp; Marketing</a>
-          <a class="w-dropdown-link" href="#">Finance &amp; HR</a>
-          <a class="w-dropdown-link" href="#">R&amp;D Programs</a>
-          <a class="w-dropdown-link" href="#">R&amp;D Skunkworks</a>
-          <a class="w-dropdown-link" href="#">East Operations</a>
-        </nav>
-      </div>
+
+     
+
     </div>
   </div>
 
