--- a/index.html
+++ b/index.html
@@ -354,13 +354,16 @@
             64
           </p>
           <div class="tile-footer">
-            <a class="w-inline-block action-link" href="#" data-ix="show-toggle-menus"><img class="action-dots" src="images/dots.png"  data-ix="show-toggle-menus">
+            <a class="w-inline-block action-link" href="#" data-ix="show-toggle-menus">
+              <img class="action-dots" src="images/dots.png"  data-ix="show-toggle-menus">
             </a>
             <div class="togglemenu" data-ix="display-none-on-load">
-              <a class="w-inline-block action-link" href="#"><img class="action-icon" src="images/install.png" width="24" data-ix="show-product-row">
+              <a class="w-inline-block action-link" href="#">
+                <img class="action-icon" src="images/install.png" width="24" data-ix="show-product-row">
                 <div class="action-text" data-ix="show-product-row">install</div>
               </a>
-              <a class="w-inline-block action-link" href="#"><img class="action-icon" src="images/download.png" width="28" >
+              <a class="w-inline-block action-link" href="#">
+                <img class="action-icon" src="images/download.png" width="28" >
                 <div class="action-text">download again</div>
               </a>
             </div>
@@ -371,16 +374,18 @@
           <h3 class="catalog-header">Load Balancer Max Nodes</h3>
           <p class="catalog-text">
             50
-            
           </p>
           <div class="tile-footer">
-            <a class="w-inline-block action-link" href="#" data-ix="show-toggle-menus"><img class="action-dots" src="images/dots.png"  data-ix="show-toggle-menus">
+            <a class="w-inline-block action-link" href="#" data-ix="show-toggle-menus">
+              <img class="action-dots" src="images/dots.png"  data-ix="show-toggle-menus">
             </a>
             <div class="togglemenu" data-ix="display-none-on-load">
-              <a class="w-inline-block action-link" href="#"><img class="action-icon" src="images/install.png" width="24" data-ix="show-product-row">
+              <a class="w-inline-block action-link" href="#">
+                <img class="action-icon" src="images/install.png" width="24" data-ix="show-product-row">
                 <div class="action-text" data-ix="show-product-row">install</div>
               </a>
-              <a class="w-inline-block action-link" href="#"><img class="action-icon" src="images/download.png" width="28" >
+              <a class="w-inline-block action-link" href="#">
+                <img class="action-icon" src="images/download.png" width="28" >
                 <div class="action-text">download again</div>
               </a>
             </div>
@@ -393,13 +398,16 @@
             10
           </p>
           <div class="tile-footer">
-            <a class="w-inline-block action-link" href="#" data-ix="show-toggle-menus"><img class="action-dots" src="images/dots.png"  data-ix="show-toggle-menus">
+            <a class="w-inline-block action-link" href="#" data-ix="show-toggle-menus">
+              <img class="action-dots" src="images/dots.png"  data-ix="show-toggle-menus">
             </a>
             <div class="togglemenu" data-ix="display-none-on-load">
-              <a class="w-inline-block action-link" href="#"><img class="action-icon" src="images/install.png" width="24" data-ix="show-product-row">
+              <a class="w-inline-block action-link" href="#">
+                <img class="action-icon" src="images/install.png" width="24" data-ix="show-product-row">
                 <div class="action-text" data-ix="show-product-row">install</div>
               </a>
-              <a class="w-inline-block action-link" href="#"><img class="action-icon" src="images/download.png" width="28" >
+              <a class="w-inline-block action-link" href="#">
+                <img class="action-icon" src="images/download.png" width="28" >
                 <div class="action-text">download again</div>
               </a>
             </div>
