--- a/add-in.html
+++ b/add-in.html
@@ -68,7 +68,7 @@
      <!--  <button class="open-menu toggle-slide-left">
         <img src="images/blueburger.png" width="25"/>
       </button> -->
-      <a class="w-nav-brand brand-link" href="index.html" style="margin-top:20px;">
+      <a class="w-nav-brand brand-link" href="index.html>
         <img src="images/helion-logo.png" width="216"/>
       </a>
       <nav class="w-nav-menu nav-menu" role="navigation">
@@ -88,7 +88,7 @@
           <img src="images/avatar.png" width="22"/>
         </a>
       </nav>
-      <div class="w-nav-button nav-link menu" style="float:left;margin-top:10px;">
+      <div class="w-nav-button nav-link menu">
         <div class="w-icon-nav-menu"></div>
       </div>
       <div class="w-dropdown header-dropdown" data-delay="0">
