--- a/index-flex.html
+++ b/index-flex.html
@@ -13,12 +13,22 @@
   <link rel="apple-touch-icon" href="images/hphelionfav.png">
 
 <style type="text/css">
+  body {
+    background-color: #f2f2f2;
+    font-family: 'Lato', 'Open Sans', Arial, 'Helvetica Neue', Helvetica, sans-serif;
+    color: #333;
+    font-size: 14px;
+    line-height: 20px;
+  }
+
   #page-wrapper {display: flex;flex-direction:column;}
-  header {display:flex;}
+  header {display:flex;align-items:center;}
 
-  header, header div, main, footer {flex:1;}
+  header, main, footer {flex:1;}
 
-  header div {flex:0 0 auto;width:20%;}
+.burger {flex:0 0 70px;margin: 0 10px 0 0;padding:0 0 0 20px;background:#23de70;}
+.logo {flex:0 0 22%;}
+.header-dropdown {flex:0 0 250px;}
 
   .menu {
     position: fixed;
@@ -147,7 +157,7 @@ body.sml-open div.slide-menu-left {
       </div>
 
       <div class="logo">
-        <a class="w-nav-brand brand-link" href="index.html" style="margin-top:20px;">
+        <a class="w-nav-brand brand-link" href="index.html">
           <img src="images/helion-logo.png" width="216"/>
         </a>
       </div>
